feat: add api /users/:id
